syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package service.drug;

message DrugResponse {
  string status = 1;
}

message DrugRequest {
  string drugId = 1;
}

service DrugService {
  rpc orderDrug(DrugRequest) returns (DrugResponse);
}
